WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273499
REGRESSION (
278150@main
): [ MacOS ] TestWebKitAPI.ProcessSwap.NavigateCrossOriginWithOpenee is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=273499
Summary
REGRESSION (278150@main): [ MacOS ] TestWebKitAPI.ProcessSwap.NavigateCrossOr...
Jay Stfleur
Reported
2024-04-30 09:44:46 PDT
Description: TestWebKitAPI.ProcessSwap.NavigateCrossOriginWithOpenee Is a consistent failure on Monterey+ after changes on
278150@main
Buildbot URL:
https://build.webkit.org/#/builders/937/builds/2866
History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.ProcessSwap.NavigateCrossOriginWithOpenee
Diff/Image Diff/Crash Log: RemoteLayerTreeDrawingAreaProxyMac::scheduleDisplayLink(): page has no displayID RemoteLayerTreeDrawingAreaProxyMac::scheduleDisplayLink(): page has no displayID /Volumes/Data/worker/Apple-Sonoma-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:6264Expected equality of these values: @"true" Which is: "true" hasOpener Which is: "false"/Volumes/Data/worker/Apple-Sonoma-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:6271Expected equality of these values: webkitPID Which is: 19787 [webView _webProcessIdentifier] Which is: 19789
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-30 09:45:11 PDT
<
rdar://problem/127299293
>
Alex Christensen
Comment 2
2024-04-30 16:24:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27962
EWS
Comment 3
2024-04-30 16:51:54 PDT
Committed
278197@main
(8f0699c3de74): <
https://commits.webkit.org/278197@main
> Reviewed commits have been landed. Closing PR #27962 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug