REGRESSION (278150@main): [ MacOS ] TestWebKitAPI.ProcessSwap.NavigateCrossOriginWithOpenee is a consistent failure https://bugs.webkit.org/show_bug.cgi?id=273499 rdar://127299293

Reviewed by Sihui Liu.

I forgot to remove an exclamation point.

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::hasOpenedFrames const):

Canonical link: https://commits.webkit.org/278197@main